<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">1927942630752269</string>
    <string name="fb_login_protocol_scheme">fb1927942630752269</string>

    //email
    <string name="app_name">Food Shop</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>

    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_maps">Map</string>
    <string name="static_Open">Open: </string>
    <string name="static_Close">Close: </string>

    <string name="passWord">Password</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="createAnAccount">Create an account</string>
    <string name="rememberPassword">Remember password</string>
    <string name="signUp">Sign up</string>
    <string name="acceptTerms">You must accept terms and conditions</string>
    <string name="confirmPassWord">Confirm password</string>
    <string name="telephoneNumber">Phone number</string>
    <string name="userName">Username</string>
    <string name="acceptTerm">Accept term</string>
    <string name="signup">Create your Account</string>

    <string name="defaultLanguage">Default</string>
    <string name="notifications">Notifications</string>
    <string name="notification">Notification</string>
    <string name="dangNhapKhongThanhCong">Login fail!</string>
    <string name="phoneLength">Phone number must have 10 or 11 letters!</string>
    <string name="passwordLength">Password must contain more than 6 letters!</string>
    <string name="fillAllData">Please fill all data!</string>
    <string name="wrongFormatEmail">Wrong email format!</string>
    <string name="passwordDontMatch">Password does not match!</string>
</resources>
