<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:orientation="vertical"
    tools:context="com.example.me.firebase.Login.SignupActivity">


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/white" />

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="18dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_user" />

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:hint="@string/userName"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:src="@drawable/icon_mail" />

                <EditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_phone" />

                <EditText
                    android:id="@+id/edtPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:hint="@string/telephoneNumber"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:src="@drawable/address" />

                <EditText
                    android:id="@+id/edtDiaChi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="2dp"
                    android:hint="Address"
                    android:inputType="numberDecimal"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_pass" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/passWord"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN"
                    android:textCursorDrawable="@null" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/icon_drawable"
                    android:layout_height="@dimen/icon_drawable"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_pass" />

                <EditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/confirmPassWord"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/colorBSN"
                    android:textCursorDrawable="@null" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp">

            </LinearLayout>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/boder_button"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_link_to_login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <Button
                android:id="@+id/btn_reset_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@null"
                android:text="@string/btn_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="20dp"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
